--- a/LuanFirstAppAndroid/app/src/main/res/values/strings.xml
+++ b/LuanFirstAppAndroid/app/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="button_label_count">Count</string>
     <string name="button_label_toast">Toast</string>
     <string name="count_initial_value">0</string>
+
+    <string name="article_text">Lorem Ipsum is
+        simply dummy text of the printing and typesetting
+        industry. Lorem Ipsum has been the industry standard
+        dummy text ever since the 1500s, when an unknown printer
+        took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap
+        into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset
+        sheets containing Lorem Ipsum passages, and more recently with
+        desktop publishing software like Aldus PageMaker including
+        versions of Lorem Ipsum.</string>
+    <string name="article_subtitle">Phụ đề bài viết</string>
+
 </resources>
